--- a/scripts.yaml
+++ b/scripts.yaml
@@ -189,7 +189,7 @@ turn_on_media_center:
   alias: Turn On Media center
   mode: single
   sequence:
-  - action: media_player.turn_off
+  - action: media_player.media_pause
     metadata: {}
     data: {}
     target:
@@ -269,11 +269,6 @@ start_marilou_bedtime_routine:
     target:
       entity_id: scene.chambre_bebe_initial
     data: {}
-  - action: media_player.turn_on
-    data: {}
-    target:
-      entity_id:
-      - media_player.vpe_chambre_marilou_music_assistant
   - action: media_player.volume_set
     data:
       volume_level: 0.1
@@ -336,11 +331,6 @@ eteindre_temporairement_un_assistant_vocal:
 lancer_playlist_de_reveil:
   alias: Réveil Lumineux - Musique
   sequence:
-  - action: media_player.turn_on
-    data: {}
-    target:
-      entity_id:
-      - media_player.vpe_chambre_music_assistant
   - action: media_player.volume_set
     data:
       volume_level: 0.2
@@ -486,7 +476,6 @@ eteindre_tous_les_lecteur_multimedia:
     target:
       entity_id:
       - media_player.apple_tv_salon
-      - media_player.vpe_chambre_music_assistant
   description: ''
   icon: mdi:television-speaker-off
 test_2:
@@ -565,11 +554,6 @@ transfer_music_music_assistant:
     data:
       source_player: '{{source}}'
       auto_play: true
-  - action: media_player.turn_off
-    metadata: {}
-    data: {}
-    target:
-      entity_id: '{{source}}'
   fields:
     target:
       selector:
@@ -580,7 +564,7 @@ transfer_music_music_assistant:
       selector:
         entity:
           domain: media_player
-          integration: mass
+          integration: music_assistant
       name: Source location of the music stream (Currently playing)
   description: ''
   icon: mdi:account-music
