--- a/automations.yaml
+++ b/automations.yaml
@@ -452,7 +452,7 @@
     to: Vide
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.depart_intelligent
     state: 'on'
   - condition: state
     entity_id: input_boolean.guest_mode
@@ -473,7 +473,7 @@
     from: Arrivée en cours
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.arrivee_intelligente
     state: 'on'
   - condition: state
     entity_id: input_boolean.guest_mode
@@ -505,7 +505,7 @@
     above: 0
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.recevoir_notification_fenetre_ouverte_et_pluie
     state: 'on'
   - condition: state
     entity_id: input_select.modes_de_presence_de_la_maison_v2
@@ -643,7 +643,10 @@
       message: '{{trigger.json.movie.title}} ({{trigger.json.movie.year}})'
       tag: '{{trigger.json.downloadId}}'
     trigger: webhook
-  conditions: []
+  conditions:
+  - condition: state
+    entity_id: input_boolean.recevoir_notification_media_telecharge
+    state: 'on'
   actions:
   - action: script.turn_on
     metadata: {}
@@ -1559,98 +1562,6 @@
       target:
         entity_id: assist_satellite.vpe_bureau_satellite_assist
   mode: single
-- id: '1708194950863'
-  alias: Party Time Marilou
-  description: ''
-  triggers:
-  - entity_id:
-    - input_boolean.party_time_marilou
-    trigger: state
-  conditions: []
-  actions:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: input_boolean.party_time_marilou
-        state: 'on'
-      sequence:
-      - action: light.turn_on
-        metadata: {}
-        data:
-          rgb_color:
-          - 40
-          - 95
-          - 244
-          brightness_pct: 100
-        target:
-          entity_id: light.chambre_bebe_leds
-      - action: light.turn_on
-        metadata: {}
-        data:
-          rgb_color:
-          - 235
-          - 77
-          - 61
-          brightness_pct: 100
-        target:
-          entity_id:
-          - light.miffy
-      - action: light.turn_on
-        metadata: {}
-        data:
-          rgb_color:
-          - 255
-          - 0
-          - 255
-          brightness_pct: 100
-        target:
-          entity_id:
-          - light.chambre_bebe_suspension
-      - action: light.turn_on
-        metadata: {}
-        data:
-          effect: prism
-        target:
-          entity_id:
-          - light.chambre_bebe_suspension
-          - light.chambre_bebe_leds
-          - light.miffy
-      - action: light.turn_on
-        metadata: {}
-        data:
-          effect: candle
-        target:
-          entity_id: light.chambre_bebe_etoile
-      - action: light.turn_on
-        metadata: {}
-        data: {}
-        target:
-          entity_id: light.chambre_bebe_guirlande
-      - action: light.turn_on
-        metadata: {}
-        data:
-          brightness_pct: 100
-        target:
-          entity_id: light.chambre_bebe_etoile
-    - conditions:
-      - condition: state
-        entity_id: input_boolean.party_time_marilou
-        state: 'off'
-      sequence:
-      - action: light.turn_on
-        metadata: {}
-        data:
-          brightness_pct: 100
-          effect: none
-          kelvin: 2457
-        target:
-          area_id: chambre_bebe
-      - action: light.turn_off
-        metadata: {}
-        data: {}
-        target:
-          area_id: chambre_bebe
-  mode: single
 - id: '1714134719761'
   alias: "Assist - \U0001F4E3 Réinitialiser la lumière"
   description: ''
@@ -1730,7 +1641,7 @@
     trigger: state
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.extinction_automatique_des_pieces
     state: 'on'
   - condition: state
     entity_id: input_select.modes_de_presence_de_la_maison_v2
@@ -1772,7 +1683,7 @@
     trigger: state
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.extinction_automatique_des_pieces
     state: 'on'
   - condition: state
     entity_id: input_select.modes_de_presence_de_la_maison_v2
@@ -1804,7 +1715,7 @@
     trigger: state
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.extinction_automatique_des_pieces
     state: 'on'
   - condition: state
     entity_id: input_select.modes_de_presence_de_la_maison_v2
@@ -2749,7 +2660,7 @@
       seconds: 0
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.extinction_automatique_des_pieces
     state: 'on'
   - condition: state
     entity_id: input_select.modes_de_presence_de_la_maison_v2
@@ -3112,7 +3023,7 @@
     from: Occupée
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.depart_intelligent
     state: 'on'
   - condition: state
     entity_id: input_boolean.guest_mode
@@ -4251,7 +4162,7 @@
     - input_boolean.mode_cinema
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.extinction_automatique_des_pieces
     state: 'on'
   actions:
   - choose:
@@ -4295,7 +4206,11 @@
       seconds: 30
   - trigger: state
     entity_id:
-    - binary_sensor.capteur_presence_chambre_marilou_occupancy
+    - input_boolean.mode_sommeil_marilou
+    for:
+      hours: 0
+      minutes: 0
+      seconds: 10
   - trigger: homeassistant
     event: start
   conditions: []
@@ -4314,7 +4229,7 @@
           entity_id: media_player.vpe_chambre_media_player
     - conditions:
       - condition: state
-        entity_id: binary_sensor.capteur_presence_chambre_marilou_occupancy
+        entity_id: input_boolean.mode_sommeil_marilou
         state: 'on'
       sequence:
       - action: media_player.volume_set
@@ -4354,7 +4269,7 @@
     event: start
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.extinction_automatique_des_pieces
     state: 'on'
   actions:
   - choose:
@@ -4405,7 +4320,7 @@
     event: start
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.extinction_automatique_des_pieces
     state: 'on'
   actions:
   - choose:
@@ -4456,7 +4371,7 @@
     event: start
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.extinction_automatique_des_pieces
     state: 'on'
   actions:
   - choose:
@@ -4897,7 +4812,7 @@
     trigger: state
   conditions:
   - condition: state
-    entity_id: input_boolean.automation_monitor_home
+    entity_id: input_boolean.extinction_automatique_des_pieces
     state: 'on'
   - condition: state
     entity_id: input_select.modes_de_presence_de_la_maison_v2
