--- a/scripts.yaml
+++ b/scripts.yaml
@@ -267,16 +267,6 @@ wake_up:
 start_marilou_bedtime_routine:
   alias: Démarrer la routine du sommeil de Marilou
   sequence:
-  - action: light.turn_off
-    metadata: {}
-    data: {}
-    target:
-      entity_id: light.couloir_suspension_etage
-  - action: scene.turn_on
-    metadata: {}
-    target:
-      entity_id: scene.chambre_bebe_initial
-    data: {}
   - action: media_player.volume_set
     data:
       volume_level: 0.1
@@ -298,8 +288,7 @@ start_marilou_bedtime_routine:
       - media_player.vpe_chambre_marilou_music_assistant
   mode: single
   icon: mdi:bell-sleep
-  description: Démarrer la routine du sommeil de Marilou. A utiliser lorsque je suis
-    en train d'endormir ma fille
+  description: ''
 lancer_playlist_de_reveil:
   alias: Réveil Lumineux - Musique
   sequence:
